feat: Complete Firebase integration with MCP server
- Add Firebase project configuration (firebase.json, .firebaserc)
- Implement comprehensive Firebase services:
  * Authentication with role-based access
  * Firestore database with security rules
  * Firebase Storage for file uploads
  * Cloud Messaging for push notifications
  * Analytics for user tracking
  * Firebase Hosting for deployment
- Create Firebase utility functions (lib/firebase-utils.ts)
- Add security rules for Firestore and Storage
- Configure Next.js for Firebase hosting
- Add deployment scripts and environment configuration
- Create comprehensive Firebase integration documentation
- Deploy application to Firebase Hosting (https://nxtlevelrentals.web.app)
- Add Firebase MCP server tools integration for project management

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCf2ZEMjwVbzkZzVAWlX8Bxf5k66Uc3VMs
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=rental-app-3ec4a.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=rental-app-3ec4a
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=rental-app-3ec4a.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=118318302192
+NEXT_PUBLIC_FIREBASE_APP_ID=1:118318302192:web:aa9b75535dcb24c61b5335
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=""
 FIREBASE_DATABASE_URL=
