--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:roles": "node scripts/seed-roles.js",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:hosting": "npm run build && firebase deploy --only hosting",
+    "deploy:rules": "firebase deploy --only firestore:rules,storage",
+    "emulators": "firebase emulators:start"
   },
   "dependencies": {
     "firebase": "^10.11.0",
+    "firebase-admin": "^12.0.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
