--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ yarn-error.log*
 
 # Claude CLI
 .claude/
+
+# TypeScript build info
+*.tsbuildinfo
+
+# Agent artifacts
+.agent-artifacts/
+validation_report.md
